# aoc2022

./: .clang-format  .gitignore  CMakeLists.txt  README.md  common.cmake
day01/: day01.cpp
day02/: day02.cpp
day03/: day03.cpp
day04/: CMakeLists.txt  day04.cpp
day05/: day05.cpp
day06/: day06.cpp
day07/: day07.cpp
day08/: day08.cpp
scripts/: get.sh  new_day.sh  template.cpp
utils/: utils.hpp
